# es-theme-superkonna

./: .gitignore  DESIGN.md  bindings.toml  splash.xml  theme.xml  variables.xml
_inc/metadata/: _default.xml  amstradcpc.xml  custom-collections.xml  genesis.xml  j2me.xml  mame.xml  saalis.xml  solarus.xml  tg16cd.xml  vic20.xml  wonderswan.xml  xbox.xml
assets/buttons/: LICENSE.txt
assets/sounds/: LICENSE.txt
projects/overlay/: BATOCERA-INTEGRATION.md  Cargo.toml  DESIGN-BARS.md  menu.toml  test-sequence.sh
projects/overlay/docs/: API-AUTH.md  CONFIGGEN-PIPELINE.md  DISTRO-OPTIONS.md  KERNEL.md  LIBRETRO-FRONTEND.md  MEDIA-PLAYBACK.md  RETROACHIEVEMENTS.md  YLE-AREENA.md
projects/overlay/src/: audio.rs  bindings.rs  buttons.rs  config.rs  lib.rs  main.rs  menu.rs  popup.rs  renderer.rs  retroarch.rs  socket.rs  theme.rs  watcher.rs  window.rs
scripts/: fetch-alekful-assets.sh  fetch-canvas-assets.sh  fetch-canvas-backgrounds.sh  fetch-elementerial-assets.sh  generate-card-colors.sh  generate-system-backgrounds.sh  setup-overlay.sh  update-hints.sh  update-profile.sh  update-weather.sh
settings/aspect/: 16-9.xml  4-3.xml
settings/colors/: dark-base.xml  dark.xml  light-base.xml  light.xml  scheme.xml
settings/colors/banana/: ratio-square.xml  ratio-steam.xml  scheme-dark.xml  scheme-light.xml
settings/colors/blueberry/: ratio-steam.xml  scheme-dark.xml  (+1 more)
settings/display/: view-boxes.xml  view-flix.xml  view-gamecarousel.xml  view-general.xml  view-grid.xml  view-menu.xml  view-system.xml
settings/fontSize/: large.xml  medium.xml  small.xml
(+55 files in other folders)
