[package]
name = "superkonna-overlay"
version = "0.1.0"
edition = "2021"
description = "Themed achievement popup overlay for Batocera (X11)"

[dependencies]
x11rb = { version = "0.13", features = ["composite", "render", "shape", "xfixes"] }
tiny-skia = "0.11"
notify = "7"
fontdue = "0.9"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "s"
lto = true
strip = true
