[package]
name = "superkonna-overlay"
version = "0.1.0"
edition = "2021"
description = "Themed achievement popup overlay for Batocera (X11)"

[[bin]]
name = "superkonna-overlay"
path = "src/main.rs"

[[bin]]
name = "preview"
path = "src/bin/preview.rs"

[dependencies]
x11rb = { version = "0.13", features = ["composite", "render", "shape", "xfixes"] }
tiny-skia = "0.11"
resvg = "0.44"
notify = "7"
fontdue = "0.9"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
png = "0.17"

[profile.release]
opt-level = "s"
lto = true
strip = true
